Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -210,7 +210,7 @@ footer {
 		border: none;
 		}
 	footer {
-		position: relative;
+		position: absolute;
 		margin: 40px 0;
 		padding: 40px 0;
 		bottom: 0;
